<resources>
    <string name="app_name">TheComicsLibrary</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>

    <string name="home_second">Home Second</string>


    <string name="title_latest">Latest</string>
    <string name="title_search">Search</string>
    <string name="title_mycomics">MyComics</string>
    <string name="desc_placeholder">Issue Plot:</string>
    <string name="include_placeholder">Original Stories:</string>
    <string name="title_placeholder">Issue Title:</string>
    <string name="subtitle_placeholder">Issue SubTitle:</string>
    <string name="serie_placeholder">Serie:</string>
    <string name="publisher_placeholder">Publisher:</string>
    <string name="date_placeholder">Release Date:</string>
    <string name="numbers_placeholder">Numbers:</string>
    <string name="issue_image">IssueImage</string>
    <string name="search">Search</string>


    <array name="category">
        <item>Title</item>
        <item>Serie</item>
        <item>Publisher</item>
    </array>
    <string name="title_activity_list_serie">ListSerie</string>
    <string name="title_activity_my_comics">MyComicsActivity</string>
    <string name="action_settings">Settings</string>

</resources>
